--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "scripts": {
         "prepare": "prep/makePng.sh; prep/makeThumbs.sh; prep/makeAvif.sh; prep/makeJson.sh",
         "build": "npx @11ty/eleventy",
-        "serve": "npx @11ty/eleventy --serve"
+        "serve": "npx @11ty/eleventy --serve",
+        "build-ghpages": "npx @11ty/eleventy --pathprefix=/almondjoyart/"
     },
     "repository": {
         "type": "git",
